--- a/01let和const定义变量/01es5中的定义变量.html
+++ b/01let和const定义变量/01es5中的定义变量.html
@@ -14,12 +14,13 @@
 <script>
 	/*
 	var和function定义变量特点
-		1..var  function   有变量提升
+		1.var  function   有变量提升
 	  		var 只会提前声明
 	  		function  既声明又定义
 	  	2.在全部作用域下，使用var和function声明变量会给Window增加属性
 	 */
 	
+//1.
 	console.log(a);   //undefined
 	console.log(getA); //打印函数
 
@@ -28,12 +29,13 @@
 
 	};
 
+//2.
 	var a =2;
 	console.log(window.a);
 	console.log("getA" in window);  //判断window里面有没有getA也可以用in
 
 
-		    let x1,x2;
+	let x1,x2;
     ({x1,x2} = {x1:1,x2:2});
     console.log(x1, x2);//拿括号包起来是因为块级作用域
 
