--- a/02解构赋值/04函数参数解构赋值.html
+++ b/02解构赋值/04函数参数解构赋值.html
@@ -16,16 +16,18 @@ getA([1,2,3,4,5]);
 
 
 
-// function getB({name='杜秦芝',age=100} = {}){   //当不传参数的时候这样写默认值， 要是没有后面={}，那么会报错
+// function getB({name='dqz',age=100} = {}){   //当不传参数的时候这样写默认值， 要是没有后面={}，那么会报错
 // 	console .log(name,age);   
 // }
-// getB();    //不会报错，没有传参的时候默认传了{}，然后{}里面默认name='杜秦芝'，age=100
+// getB();    //不会报错，没有传参的时候默认传了{}，然后{}里面默认name='dqz'，age=100
 // 
 function getB({name,age=100}){
 	console .log(name,age);
 }
-getB({name:'杜秦芝'});   //杜秦芝 100
+getB({name:'dqz'});   //dqz 100
 // getB();                  //报错，没有实参会报错
+
+
 
 
 //牢记下面的这个案例
